# LearningQt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: technical-reference.md
docs/architecture/: video-factory-design.md
engine/: CMakeLists.txt
engine/assets/: mermaid_theme.json
engine/qml/: CloudRagScene.qml  TutorialScene.qml
engine/src/: main.cpp  main_cloudrag.cpp
engine/src/encode/: video_encoder.cpp  video_encoder.h
engine/src/manifest/: manifest_writer.cpp  manifest_writer.h
engine/src/narration/: narration_engine.cpp  narration_engine.h
engine/src/ragclient/: cloud_rag_client.cpp  cloud_rag_client.h
lecture/: video-factory-lecture.html
web/public/: app.js  index.html  manifest.json  random.html  styles.css  video.html
web/public/videos/cloudrag_20260714_192027/: metadata.json
web/public/videos/cloudrag_20260714_192246/: metadata.json
web/public/videos/cloudrag_20260714_193048/: metadata.json
web/public/videos/cloudrag_20260714_194202/: metadata.json
web/public/videos/cloudrag_20260714_203920/: metadata.json
web/public/videos/cloudrag_20260714_204109/: metadata.json
web/public/videos/cloudrag_20260714_204827/: metadata.json
web/public/videos/cloudrag_20260714_205040/: metadata.json
web/public/videos/cloudrag_20260721_001554/: metadata.json
web/public/videos/cloudrag_20260721_001843/: metadata.json
web/public/videos/cloudrag_20260721_001941/: metadata.json
web/public/videos/cloudrag_20260722_031649/: metadata.json
web/public/videos/cloudrag_20260722_033402/: metadata.json
web/public/videos/cloudrag_20260722_163547/: metadata.json
web/public/videos/cloudrag_20260722_165428/: metadata.json
web/public/videos/cloudrag_20260722_171247/: metadata.json
web/public/videos/cloudrag_20260723_000832/: metadata.json
web/public/videos/cloudrag_20260724_010815/: metadata.json
web/public/videos/cloudrag_20260724_052218/: metadata.json
web/public/videos/phase2-vex-for-loop/: metadata.json
